--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,7 +2,7 @@ $icon-font-path: "/fonts/";
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
-
+@import "scrolling-nav.scss";
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -24,7 +24,7 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
+  // border-bottom: 1px solid #e5e5e5;
   margin-bottom: 10px;
 
   /* Make the masthead heading the same height as the navigation */
@@ -40,7 +40,7 @@ body {
 .footer {
   padding-top: 19px;
   color: #777;
-  border-top: 1px solid #e5e5e5;
+  // border-top: 1px solid #e5e5e5;
 }
 
 .container-narrow > hr {
@@ -88,4 +88,9 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+.glyphicon.glyphicon-one-fine-dot:before {
+    content: "\25cf";
+    // font-size: 1.5em;
 }
