--- a/styles/scrolling-nav.css
+++ b/styles/scrolling-nav.css
@@ -40,33 +40,24 @@ of those sections to manage the look and feel of the site. */
 
 .about-section {
     height: 100%;
-<<<<<<< HEAD
-    padding-top: 100px;
-=======
+    min-height: 100%;
     padding-top: 150px;
->>>>>>> gh-pages
     text-align: center;
     
 }
 
 .services-section {
     height: 100%;
-<<<<<<< HEAD
-    padding-top: 100px;
-=======
+    min-height: 100%;
     padding-top: 150px;
->>>>>>> gh-pages
     text-align: center;
     
 }
 
 .contact-section {
     height: 100%;
-<<<<<<< HEAD
-    padding-top: 100px;
-=======
+    min-height: 100%;
     padding-top: 150px;
->>>>>>> gh-pages
     text-align: center;
     
 }
